fix GlobalExceptionHandler